Bug 1759745 - Brotli compressed HTTP chunks larger than 128k not fully processed r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D141272